<resources>
    <string name="app_name">كلمات القرآن</string>
    <string name="action_search">بحث</string>
    <string name="search_hint">بحث في الآيات ...</string>
    <string name="ayah">الآية</string>
    <string name="kalemah">الكلمة</string>
    <string name="tafsir">التفسير</string>
    <string name="surah">سورة %s</string>
    <string name="ayahWithColon">الآية:</string>
    <string name="kalemahWithColon">الكلمة:</string>
    <string name="tafsirWithColon">التفسير:</string>
    <string name="action_about">حول البرنامج</string>
    <string name="action_share">مشاركة رابط البرنامج</string>
    <string name="settings_description">Settings Description</string>
    <string name="loading_data">جاري تحميل البيانات</string>
    <string name="from">من</string>
    <string name="author">لفضيلة الأستاذ الشيخ\nحسنين محمد مخلوف</string>
    <string name="book_name_2">تفسير وبيان</string>
    <string name="searchSurah">بحث في السور</string>
    <string name="font_color">لون الخط:</string>
    <string name="share_link">تم نسخ رابط البرنامج</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=org.zenbaei.kalematAlQuraan</string>
    <string name="enable_notification">تفعيل إظهار إشعار لمعنى كلمة مرتين يوميا</string>
    <string name="alarm_hour">13</string>
    <string name="alarm_minutes">30</string>

    <!-- Shown above search results when we receive a search request. -->
    <!--    <plurals name="search_results">-->
    <string name="one">وردت كلمة \"%s\" مرة واحدة</string>
    <string name="two">وردت كلمة \"%s\" مرتان</string>
    <string name="three_to_ten">وردت كلمة \"%1$s\" %2$d مرات</string>
    <string name="other">وردت كلمة \"%1$s\" %2$d مرة</string>


    <!-- Search failure message. -->
    <string name="no_results">لا توجد نتيجة بحث لكلمة \"%s\"</string>

    <string name="intro">الحمد لله رب العالمين، والصلاة والسلام على خاتم المرسلين، وأفضل الخلق أجمعين، وعلى آله وأصحابه والتابعين لهم بإحسان إلى يوم الدين.\n\nأما بعد،\nفهذا تفسير لما يحتاج إلى التفسير والبيان من كلمات القرآن، يوضح معانيها، ويعين على فهم الآيات التي هي فيها. وضعت فيه الكلمات على ترتيب الآيات في السور، وعلى يمين كل كلمة رقم آيتها، وعن يسارها تفسيرها، في دقة وإيجاز، مع سهولة ووضوح، ليكون رفيقًا للمقيم، وزادًا للمسافر، خفيف المحمل، سهل المأخذ، داني القطوف، يسارع إليه التالي والسامع فيسعفه بطلبته، ويعينه على بلوغ غايته، دون تجشم وعناء.\n\nو أسأل الله - عز شأنه - أن يتقبله خالصًا لوجهه الكريم وأن يجعلني به ومن أعان على نشره فيمن أدي الأمانة، وقضى شيئا من حقوق كتابه العظيم، إنه سميع مجيب كريم.</string>
    <string name="sign">حرر بالقاهرة 11 ربيع الأول 1375هـ\n16 أكتوبر 1956 م</string>
    <string name="author_2">حسنين محمد مخلوف</string>
    <string name="Allah">بسم الله الرحمن الرحيم</string>
    <string name="notes_1">تنبيهات</string>
    <string name="notes_2">1. لم تفسّر الحروف المقطّعة في فواتح بعض السّور، نحو الم، الر، حـم، ق، إختياراً للقول بأنها من أسرار التّنزيل، والله أعلم بمراده. \n\n
2. فسّرنا كلمات القرآن بالمعاني المرادة منها في الآيات، وقد تكون المعاني حقيقية، وقد تكون مجازية، أو كنائية . .\n\n
3. اتّبعنا في ضبط الكلمات رواية الإمام أبي عمر حفص بن سليمان بن المغيرة الأسديّ الكوفي المتوفى سنة 180 هـ لقراءة الإمام أبي بكر عاصم بن أبي عبد الرحمن عبد الله بن حبيب السّلميّ، المتوفى سنة 47 هـ عن حفاظ القرآن من الصّحابة رضي الله عنهم عثمان بن عفّان، وعليّ بن أبي طالب، وزيد بن ثابت، وعبد الله بن مسعود، وأُبيّ بن كعب
 - رضي الله عنهم- عن النّبي صلى الله عليه وسلم، عن الرّوح الأمين جبريل عليه السّلام، عن ربّ العالمين جلّ جلاله، وهي رواية متواترة التلاوة، وحفظاَ وضبطاَ وتدويناَ.
</string>

    <string name="authorWord">مقدمة المؤلف</string>
    <string name="lastReadPage">عودة لآخر صفحة تمت قراءتها</string>
    <string name="about">عند ملاحظة أي خطأ يرجى مراسلتي على zenbaei@gmail.com، شكراً لكم.\n</string>
    <string name="close">إغلاق</string>
    <string name="surahOnSwipeRightHint">لتصفح السورة قم بالضغط عليها أو إضغط علامة البحث أعلى الشاشة للبحث في الآيات</string>
    <string name="authorOnSwingLeftHint">وللرجوع إضغط زر العودة الخاص بالهاتف</string>
    <string name="backHint">للرجوع إضغط زر العودة الخاص بالهاتف</string>
    <string name="ayahOnSwipeLeftHint">للإنتقال للصفحة التالية إسحب بإصبعك جهة اليمين وللرجوع إضغط زر العودة الخاص بالهاتف</string>
    <string name="ayahOnSwipeRightHint">للإنتقال للصفحة السابقة إسحب بإصبعك جهة اليسار وللرجوع إضغط زر العودة الخاص بالهاتف</string>
    <string name="copy">نسخ</string>
    <string name="favourite">أضف للمفضلة</string>
    <string name="favouriteDone">تمت الإضافة للمفضلة</string>
    <string name="copyDone">تم النسخ</string>
    <string name="fav">المفضلة</string>
    <string name="emptyFav">لإضافة تفضيلات قم بالضغط على الآية لفترة حتى يظهر لك زر "'أضف للمفضلة'"</string>
    <string name="delete">حذف</string>
    <string name="deleted">تم الحذف</string>
    <string name="font_size">اختر حجم الخط:</string>
    <string name="background_color">اختر لون الخلفية:</string>
    <string name="settings">إعدادات البرنامج</string>
    <string name="disable_night_mode">لتغيير اللون قم بتعطيل "'الخلفية الليلية'"</string>
    <string name="allah_saying">قوله تعالى:</string>
    <string name="nu_of_times">عدد الإشعارات اليومية:</string>
    <string name="zero">إلغاء</string>
    <string name="once">مرة</string>
    <string name="twice">مرتين</string>
    <string name="three_times">ثلاث مرات</string>
    <string name="four_times">اربع مرات</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
