<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SurahActivity">


    <!-- Search Widget -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_goToFav"
        android:orderInCategory="100"
        android:title="@string/fav" />
    <item
        android:id="@+id/action_goToFontPreferences"
        android:orderInCategory="100"
        android:title="@string/font_background" />
    <item
            android:id="@+id/action_goToIntro"
            android:orderInCategory="100"
            android:title="@string/authorWord" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <!--item
        android:id="@+id/action_showDbManager"
        android:orderInCategory="200"
        android:title="db manager"
        app:showAsAction="never" /-->

</menu>
