<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/introRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/allah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/Allah"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/allah"
        android:gravity="right"
        android:padding="10dp"
        android:text="@string/intro"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/sign" />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="2dp"
        android:text="@string/author_2"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notes_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/notes_1"
        android:textColor="@color/red"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notes_1"
        android:padding="10dp"
        android:paddingLeft="20dp"
        android:text="@string/notes_2"
        android:textSize="15dp" />

    </LinearLayout>
</ScrollView>