<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authorRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".author.AuthorActivity">

    <TextView
        android:id="@+id/book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/book_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_name"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/book_name_2"
        android:textColor="@color/red"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/author"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="next"
        android:padding="20dp"
        android:src="@mipmap/ic_next"
        android:visibility="invisible"/>
</RelativeLayout>
