<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/font_actv_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">
        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/enable_ntf_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onToggleNotification"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/enable_notification" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/night_mode_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layoutDirection="rtl"
                android:onClick="toggleNightMode"
                android:text="تفعيل الخلفية الليلية" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/fontText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:text="@string/app_name" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            android:textDirection="rtl">

            <com.google.android.material.slider.Slider
                android:id="@+id/fontSlider"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="15"
                android:valueTo="30"
                app:thumbColor="@color/black" />

            <TextView
                android:id="@+id/choose_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/font_size" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/font_color_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/black"
                android:onClick="changeFontColor"
                android:text="black"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/red"
                android:onClick="changeFontColor"
                android:text="red"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/choose_font_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/font_color" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/background_color_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:paddingTop="50dp"
            android:textDirection="rtl">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/darkGray"
                android:gravity="end"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                android:padding="5dp"
                android:textDirection="rtl">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/yellow"
                    android:onClick="changeBackgroundColor"
                    android:text="text"
                    android:textColor="@color/yellow" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:onClick="changeBackgroundColor"
                    android:text="text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/alice_blue"
                    android:onClick="changeBackgroundColor"
                    android:text="text"
                    android:textColor="@color/alice_blue" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/choose_background_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/background_color" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
